migrate blue-core to blue-base-core and blue-base-spring